--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ ai_sim/output/game_state_xtrain - Copy (2).csv
 ai_sim/output/game_state_xtrain.csv
 ai_sim/output/xtrain_game_state_sparse.p
 ai_sim/output/xtrain_sparse_attackers.p
+ai_sim/output/old
+ai_sim/models
